validaUsernameAjax: no funcionO

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ nbproject/*
 nbproject/private/private.xml
 assets/*
 protected/runtime/*
+
+/nbproject/*
+/nbproject/private/private.xml
+/assets/*
+/protected/runtime/*
