master: actu gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 nbproject/*
 nbproject/private/private.xml
 assets/*
-protected/runtime/*
+
+/protected/runtime/*
+/nbproject/*
+/nbproject/private/private.xml
+/assets/*
+/protected/runtime/*
