master: corrijo errores mayusculas para subir a produccion

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 #deny from all
 
-RewriteEngine on
+RewriteEngine On
 
 # if a directory or a file exists, use it directly
 RewriteCond %{REQUEST_FILENAME} !-f
